trunk/Archive2/b9/0c39609aec6f64/output
main.cpp:8:5: error: no matching member function for call to 'emplace_back'
  b.emplace_back({a.begin(), a.end()}); 
  ~~^~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_vector.h:936:9: note: candidate function not viable: requires 0 arguments, but 1 was provided
        emplace_back(_Args&&... __args);
        ^
1 error generated.
